--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="filters">
+			<button class="filtersbutton" id="0">TOUS</button>
+		</div>
+		
 		<div class="gallery">
 			
 		</div>
