--- a/login.html
+++ b/login.html
@@ -10,37 +10,38 @@
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
     rel="stylesheet">
   <meta name="description" content="">
-  <link rel="stylesheet" href="./assets/style.css">
-  <script src="login.js" defer></script>
+  <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://kit.fontawesome.com/ea69997875.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-  <header>
-    <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-    <nav>
-      <ul>
-        <li> <a href="index.html"> projets </a></li>
-        <li> <a href="mailto:open@gmail.com"> contact </a></li>
-        <li id="login-link">login</li>
-        <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main-login ">
-    <section id="contact">
-      <h2>Log in</h2>
-      <p class="errorLogin"></p>
-      <form action="#" method="post">
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="email">
-        <label for="password">Mot de passe</label>
-        <input type="password" name="password" id="password">
-        <input type="submit" value="Se connecter">
-        <a class="form__lien center" href="#">Mot de passe oublié</a>
-      </form>
-    </section>
-  </main>
+<body class="body__login">
+  <div class="main__container">
+    <header>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <nav>
+        <div>
+          <a href="index.html">projets</a>
+          <a href="index.html#contact">contact</a>
+          <a href="login.html">login</a>
+          <a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a>
+        </div>
+      </nav>
+    </header>
+    <main class="main-login ">
+      <section id="contact">
+        <h2>Log in</h2>
+        <p class="errorLogin"></p>
+        <form action="#" method="post">
+          <label for="email">E-mail</label>
+          <input type="email" name="email" id="email">
+          <label for="password">Mot de passe</label>
+          <input type="password" name="password" id="password">
+          <input type="submit" value="Se connecter">
+          <a class="form__lien center" href="#">Mot de passe oublié</a>
+        </form>
+      </section>
+    </main>
+  </div>
   <footer>
     <nav>
       <ul>
@@ -48,6 +49,8 @@
       </ul>
     </nav>
   </footer>
+
+  <script src="./assets/scripts/login.js" defer></script>
 </body>
 
 </html>
